fixes wrapping on preview pane

--- a/app/components/History.css
+++ b/app/components/History.css
@@ -49,6 +49,10 @@ li {
   right: 0;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 .logo {
   bottom: 0;
   position: fixed;
